Enhance function, add exception, fill all page in utility

--- a/UtilityManagement/Appartment/Appartment102.xaml
+++ b/UtilityManagement/Appartment/Appartment102.xaml
@@ -22,7 +22,7 @@
             <Label 
                     Text="Appartment 102"
                     SemanticProperties.HeadingLevel="Level1"
-                    FontSize="40"
+                    FontSize="50"
                     VerticalOptions="Center" 
                     HorizontalOptions="Center" 
                     Grid.Row="0"
@@ -32,47 +32,54 @@
             <Label 
                     Text="Tenant Name"
                     SemanticProperties.HeadingLevel="Level2"
-                    FontSize="18"
+                    FontSize="40"
                     VerticalOptions="Center" 
                     HorizontalOptions="End" 
                     Grid.Row="1"
-                    Grid.Column="1"/>
+                    Grid.Column="1"
+                    HorizontalTextAlignment="End"/>
 
-                <Entry 
+            <Entry 
                     x:Name="TenantName" 
+                    FontSize="30"
                     Grid.Row="1" 
                     Grid.Column="2" 
                     HeightRequest="50" 
-                    WidthRequest="300"/>
+                    WidthRequest="300"
+                    HorizontalOptions="Center"/>
 
-                <Label 
+            <Label 
                     Text="Move-In Date"
                     SemanticProperties.HeadingLevel="Level2"
-                    FontSize="18"
+                    FontSize="40"
                     VerticalOptions="Center" 
                     HorizontalOptions="End" 
                     Grid.Row="2"
-                    Grid.Column="1"/>
+                    Grid.Column="1"
+                    HorizontalTextAlignment="End"/>
 
-                <Entry 
+            <Entry 
                     x:Name="MoveInDate" 
+                    FontSize="30"
                     Grid.Row="2" 
                     Grid.Column="2" 
                     HeightRequest="50" 
                     WidthRequest="300"/>
 
 
-                <Label 
+            <Label 
                     Text="Phone Number"
                     SemanticProperties.HeadingLevel="Level2"
-                    FontSize="18"
+                    FontSize="40"
                     VerticalOptions="Center" 
                     HorizontalOptions="End" 
                     Grid.Row="3"
-                    Grid.Column="1"/>
+                    Grid.Column="1"
+                    HorizontalTextAlignment="End"/>
 
-                <Entry 
+            <Entry 
                     x:Name="PhoneNumber" 
+                    FontSize="30"
                     Grid.Row="3" 
                     Grid.Column="2" 
                     HeightRequest="50" 
@@ -80,23 +87,25 @@
 
 
 
-                <Label 
+            <Label 
                     Text="Deposit Ammount"
                     SemanticProperties.HeadingLevel="Level2"
-                    FontSize="18"
+                    FontSize="40"
                     VerticalOptions="Center" 
                     HorizontalOptions="End" 
                     Grid.Row="4"
-                    Grid.Column="1"/>
+                    Grid.Column="1"
+                    HorizontalTextAlignment="End"/>
 
-                <Entry 
+            <Entry 
                     x:Name="Deposit" 
+                    FontSize="30"
                     Grid.Row="4" 
                     Grid.Column="2" 
                     HeightRequest="50" 
                     WidthRequest="300"/>
 
-                <!--<Button x:Name="AppartMent101" Grid.Row="1" Grid.Column="0" Text="Appartment 101" />-->
+            <!--<Button x:Name="AppartMent101" Grid.Row="1" Grid.Column="0" Text="Appartment 101" />-->
             </Grid>
         </ScrollView>
 </ContentPage>
