--- a/UtilityManagement/Utility/Utility101.xaml
+++ b/UtilityManagement/Utility/Utility101.xaml
@@ -32,6 +32,7 @@
                 Grid.Column="0"/>
             <Entry 
                 x:Name="TenantName" 
+                FontSize="30"
                 HeightRequest="50" 
                 WidthRequest="300"
                 HorizontalOptions="Start"
@@ -50,6 +51,7 @@
                 Grid.Column="0"/>
             <Entry 
                 x:Name="Rent" 
+                FontSize="30"
                 HeightRequest="50" 
                 WidthRequest="300"
                 HorizontalOptions="Start"
@@ -69,6 +71,7 @@
                 Grid.Column="0"/>
             <Entry 
                 x:Name="WaterLaundry" 
+                FontSize="30"
                 HeightRequest="50" 
                 WidthRequest="300"
                 HorizontalOptions="Start"
@@ -87,6 +90,7 @@
                 Grid.Column="0"/>
             <Entry 
                 x:Name="LastElectricity"
+                FontSize="30"
                 HeightRequest="50" 
                 WidthRequest="200"
                 HorizontalOptions="Start"
@@ -95,7 +99,8 @@
                 Grid.ColumnSpan="1"/>
             <Entry 
                 x:Name="NewElectricity"
-                Placeholder="Enter New Reading"
+                FontSize="30"
+                Placeholder="New Reading"
                 HeightRequest="50" 
                 WidthRequest="200"
                 HorizontalOptions="Start"
@@ -113,7 +118,9 @@
                 Grid.Row="4"
                 Grid.Column="0"/>
             <Entry 
-                x:Name="ElectricityCost" 
+                x:Name="ElectricityCost"
+                Placeholder="To be calculated"
+                FontSize="30"
                 HeightRequest="50" 
                 WidthRequest="300"
                 HorizontalOptions="Start"
@@ -132,6 +139,8 @@
                 Grid.Column="0"/>
             <Entry 
                 x:Name="TotalAmmount" 
+                Placeholder="To be calculated"
+                FontSize="30"
                 HeightRequest="50" 
                 WidthRequest="300"
                 HorizontalOptions="Start"
@@ -142,6 +151,7 @@
             <!--Row 5 Right - Generate message button-->
             <Button 
                 x:Name="GenerateSMS" 
+                FontSize="20"
                 Text="Calculate And Generate SMS"
                 HeightRequest="50"
                 WidthRequest="300"
@@ -152,6 +162,9 @@
             
             <!--SMS Generate Box-->
             <Label
+                FontAttributes="Bold"
+                FontSize="17"
+                FontFamily="Courier New"
                 x:Name="SmS"
                 HeightRequest="400" 
                 WidthRequest="500"
