--- a/UtilityManagement/AppShell.xaml
+++ b/UtilityManagement/AppShell.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:appartment="clr-namespace:UtilityManagement.Appartment"
     xmlns:utility="clr-namespace:UtilityManagement.Utility"
-    xmlns:local="clr-namespace:UtilityManagement"
+    xmlns:setting="clr-namespace:UtilityManagement.Setting"
     Shell.FlyoutBehavior="Disabled">
 
     <FlyoutItem FlyoutDisplayOptions="AsMultipleItems">
@@ -67,7 +67,12 @@
 
         <Tab Title="Setting"
              Icon="setting.png">
-            <ShellContent ContentTemplate="{DataTemplate local:SettingPage}" />
+            <ShellContent Title="Update Appartment"
+                          Icon="setting.png"
+                          ContentTemplate="{DataTemplate setting:UpdateAppartment}" />
+            <ShellContent Title="Update Utility"
+                          Icon="setting.png"
+                          ContentTemplate="{DataTemplate setting:UpdateUtility}" />
         </Tab>
     </FlyoutItem>
 </Shell>
