Added update functionfor setting page, write to database, appartment photo

--- a/UtilityManagement/Appartment/Appartment101.xaml
+++ b/UtilityManagement/Appartment/Appartment101.xaml
@@ -20,6 +20,11 @@
                     <ColumnDefinition Width="4*"/>
                 </Grid.ColumnDefinitions>
 
+                <VerticalStackLayout>
+                    <Image Source="appartment_one.webp"
+                           Margin="10,170"/>
+                </VerticalStackLayout>
+
                 <Label 
                     Text="Appartment 101"
                     SemanticProperties.HeadingLevel="Level1"
